--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "browserify-demo",
   "version": "0.1.0",
-  "description": "gulp-ccr-browserify example",
+  "description": "Demonstrates transforming scripts using Browserify with gulp-chef and gulp-ccr-browserify.",
   "author": "Amobiz",
   "license": "MIT",
   "devDependencies": {
